# ElfCodeSignature

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/: defer.h  elfSignatureApi.h
source/: certificate.crt  csr.csr  private.key  rcos.pfx
src/: elf.cpp  sign.cpp  test.cpp
